[project]
name = "isd"
version = "0.3.0"
description = "Reads and archives NOAA Integrated Surface Database (ISD) files"
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["click~=8.0"]

[project.scripts]
isd = "isd.cli:main"

[project.optional-dependencies]
dev = ["mypy~=1.2", "pre-commit~=3.2", "pytest~=8.0", "ruff~=0.5.0"]
examples = ["tqdm~=4.66"]
docs = ["sphinx~=7.2"]
polars = ["polars~=0.20.6"]
pandas = ["pandas~=1.3"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
