[project]
name = "isd"
version = "0.3.0"
description = "Reads and archives NOAA Integrated Surface Database (ISD) files"
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["click~=8.0"]

[project.scripts]
isd = "isd.cli:main"

[project.optional-dependencies]
dev = ["mypy~=1.2", "pre-commit~=4.0", "pytest~=8.0", "ruff~=0.8.0"]
examples = ["tqdm~=4.66"]
docs = ["sphinx~=8.0"]
polars = ["polars~=1.19.0"]
pandas = ["pandas~=2.0"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
