[metadata]
name = pyisd
version = 0.1.0
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = "Reads and archives NOAA's Integrated Surface Database (ISD) files"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gadomski/pyisd
project_urls =
    Bug Tracker = https://github.com/gadomski/pyisd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src