[metadata]
name = isd
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = Reads and archives NOAA Integrated Surface Database (ISD) files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gadomski/pyisd
project_urls =
    Bug Tracker = https://github.com/gadomski/pyisd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    click ~= 8.0
    dask ~= 2021.11
    pandas ~= 1.3
    pyarrow ~= 6.0
    geopandas ~= 0.8.0


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    isd = isd.cli:main
